# claude-code-handbooks

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: discuss.md
.claude/commands/: create-commit.md
.claude/hooks/: block-rm.sh
.claude/skills/check-security/: SKILL.md
.claude/skills/clean-code/: SKILL.md
src/: crud.py  database.py  main.py  models.py  schemas.py
src/routers/: tasks.py
